--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -226,6 +226,11 @@ body {
     -webkit-tap-highlight-color: white498;
 }
 body {
+    background: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-image: url(/assets/img/main-bg.jpg);
     background-color: #0c0c0c;
     font-size: 14px;
     line-height: 1.6;
@@ -432,7 +437,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
     text-decoration: none;
-    color: gold;
+    color: darkgoldenrod;
 }
 .header--logo p {
     margin: 0 0 0 10px;
@@ -468,7 +473,7 @@ body {
     position: relative;
     width: 16px;
     height: 2px;
-    background-color: gold;
+    background-color: darkgoldenrod;
 }
 .header--nav-toggle::before {
     bottom: 5px;
@@ -639,6 +644,7 @@ body {
     background-color: gold;
 }
 .intro--banner h1 {
+    color: darkgoldenrod;
     position: relative;
     font-size: 68px;
     font-weight: 900;
@@ -710,7 +716,7 @@ body {
 }
 .intro--options p {
     margin-bottom: 0;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
 }
 @media (max-width: 900px) {
     .intro--banner {
@@ -760,7 +766,7 @@ body {
     }
     .intro--banner img {
         bottom: 100px;
-        width: 120px;
+        width: 150px;
     }
 }
 @media (max-width: 600px) and (max-height: 750px) {
@@ -825,10 +831,10 @@ body {
 .work--lockup .slider--item {
     position: absolute;
     display: none;
-    letter-spacing: .1rem;
+    letter-spacing: 0.1rem;
     text-align: center;
-    box-shadow: 0 0 .5rem gold;
-    padding: .8rem 0;
+    box-shadow: 0 0 0.5rem gold;
+    padding: 0.8rem 0;
 }
 .work--lockup .slider--item a {
     text-decoration: none;
@@ -840,7 +846,7 @@ body {
     font-size: 12px;
     font-weight: 900;
     background-color: goldenrod;
-    box-shadow: 0 0 .2rem gold;
+    box-shadow: 0 0 0.2rem gold;
 }
 .work--lockup .slider--item-description {
     display: none;
@@ -1007,7 +1013,7 @@ body {
     transform: rotate(45deg);
     width: 10px;
     height: 10px;
-    background-color: gold;
+    background-color: darkgoldenrod;
 }
 .about--banner h2 {
     position: relative;
@@ -1118,13 +1124,13 @@ body {
 }
 .about--options p {
     text-align: center;
-    font-size: .6rem;
+    font-size: 0.6rem;
     line-height: normal;
     position: absolute;
     width: 100%;
     left: -2px;
     bottom: -.6rem;
-    padding: .1rem;
+    padding: 0.1rem;
     color: black;
     background-color: rgba(255, 217, 0, 0.8);
 }
@@ -1193,7 +1199,7 @@ body {
         grid-template-columns: 1fr 1fr;
         gap: 2rem;
     }
-    .about--options a{
+    .about--options a {
         width: 170px;
         height: 85px;
     }
@@ -1268,20 +1274,20 @@ body {
     margin: 0 auto 25px;
 }
 .contact--lockup .modal--options li:nth-child(1) {
-    box-shadow: 0 0 .3rem gold;
+    box-shadow: 0 0 0.3rem gold;
 }
 .contact--lockup .modal--options li:nth-child(2) {
-    box-shadow: 0 0 .3rem gold;
+    box-shadow: 0 0 0.3rem gold;
 }
 .contact--lockup .modal--options li:nth-child(3) {
-    box-shadow: 0 0 .3rem gold;
+    box-shadow: 0 0 0.3rem gold;
 }
 .contact--lockup .modal--options li:nth-child(4) {
-    box-shadow: 0 0 .3rem gold;
+    box-shadow: 0 0 0.3rem gold;
 }
 .contact--lockup .modal--options li:nth-child(5) {
     margin-bottom: 0;
-    box-shadow: 0 0 .3rem gold;
+    box-shadow: 0 0 0.3rem gold;
 }
 .contact--lockup .modal--options a {
     display: block;
@@ -1296,7 +1302,7 @@ body {
 .contact--lockup .modal--options a:hover {
     color: black;
     background-color: gold;
-    box-shadow: 0 0 .6rem gold;
+    box-shadow: 0 0 0.6rem gold;
 }
 .hire {
     position: relative;
@@ -1352,7 +1358,7 @@ body {
     font-size: 16px;
     font-weight: 700;
     text-transform: uppercase;
-    background-color: gold;
+    background-color: darkgoldenrod;
     border: none;
     border-radius: 0;
 }
@@ -1425,8 +1431,8 @@ body {
     display: none;
 }
 .work-request--options input[type="checkbox"]:checked+label {
-    background-color: gold;
-    border-color: gold;
+    background-color: goldenrod;
+    border-color: darkgoldenrod;
 }
 .work-request--options input[type="checkbox"]:checked+label svg {
     width: 15px;
